--- a/package.json
+++ b/package.json
@@ -65,13 +65,13 @@
         "jest": "^24.9.0",
         "metro-react-native-babel-preset": "^0.56.0",
         "prettier": "^2.0.5",
-        "react": "16.9.0",
-        "react-native": "0.61.5",
+        "react": "^17.0.1",
+        "react-native": "^0.64.0",
         "react-test-renderer": "16.9.0",
         "typescript": "^3.9.7"
     },
     "peerDependencies": {
-        "react": "^16.8.6",
+        "react": "*",
         "react-native": ">=0.60.0"
     }
 }
